firewall_rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Sun Feb 15 17:41:45 2026
*filter
:INPUT DROP [241125:11296639]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [691:80859]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN -m limit --limit 5/min -j LOG --log-prefix "NETWORK SCAN DETECTED: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j LOG --log-prefix "NETWORK SCAN DETECTED: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j LOG --log-prefix "NETWORK SCAN DETECTED: "
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN -j LOG --log-prefix "NETWORK SCAN DETECTED: "
COMMIT
# Completed on Sun Feb 15 17:41:45 2026
